testsuite/tests/type-data/should_fail/TDStrictnessH98.hs
{-# LANGUAGE TypeData #-}
module TDStrictnessH98 where

type data T a = Cons !a
